# daplot

./: .gitignore  STARTUP_GUIDE.md  STARTUP_SCRIPT_GUIDE.md  START_SERVERS_UPDATE_SUMMARY.md  TESTING_GUIDE.md  architecture_analysis.md  deploy_fixes.py  pyproject.toml  quick_fixes.md  start_servers.bat  start_servers.py  test_predict.json
.github/workflows/: test.yml
back_end/: main.py
back_end/tests/: test_api.py
demo_design/: data.html  index.html  visualization.html
docs/: refactoring_plan.md
front_end/: README.md  cypress.config.js  data_integrated-new.html  data_integrated.html  data_integrated_offline.html  donate.html  index.html  jest.config.js  package-lock.json  package.json  prediction.html  runtime-config.json  test-components.html  test-debug-upload.html  test-fixed-upload.html  test-modular-upload.html  test-runner.js  test-upload.html  test-visualization.html  test_debug.html  test_fixes.html  visualization.html
front_end/backup/: data_integrated.html.backup  prediction.html.backup
front_end/docs/: FILE_ORGANIZATION_REPORT.md  PHASE4_COMPLETION_REPORT.md  PHASE5_FINAL_SUMMARY.md  PHASE5_TESTS_PASSED_REPORT.md  PHASE5_TEST_COMPLETION_REPORT.md  REFACTOR_SUMMARY.md  index.html
front_end/scripts/: run-tests.js  verify-tests.js
front_end/src/: daplot.js
front_end/tests/: basic.test.js  e2e-tests.html  index.html  jest-setup.js  performance-dashboard.html  setup.js  test-all-refactored-pages.html  test-modules.html  test-performance.html  test-visualization-refactor.html  unit-test-framework.js  (+1 more)
test_data/: 原始数据_sin_half.xlsx
(+37 files in other folders)
