[project]
name = "daplot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
    "pandas",
    "openpyxl",
    "python-multipart"
]

[tool.pytest.ini_options]
pythonpath = ["."]
